apps/monica/monica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monica
spec:
  selector:
    app: monica
  type: ClusterIP
  ports:
    - name: http
      port: 80
